# backend/router/system/sys_api.go
@@ -12,9 +12,13 @@ func (a *ApiRouter) InitApiRouter(Router *gin.RouterGroup) {
 	router := Router.Group("/api").Use(middleware.OperationRecordHandler())
 	routerNotRecord := Router.Group("/api")
 	{
-		router.POST("/create", apiApi.CreateApi)
+		router.POST("/create", apiApi.CreateApi)        //创建api
+		router.PUT("/update", apiApi.UpdateApi)         //更新api
+		router.GET("/detail/:id", apiApi.GetApiDetail)  //获取api详情
+		router.DELETE("/batchDel", apiApi.BatchDelApis) //批量删除api
+
 	}
 	{
-		routerNotRecord.POST("/getLists", apiApi.GetApiLists)
+		routerNotRecord.POST("/getLists", apiApi.GetApiLists) //获取api列表
 	}
 }
