# backend/service/system/sys_api.go
@@ -3,8 +3,9 @@ package system
 import (
 	"errors"
 	"gin-pro/global"
+	"gin-pro/model/common/request"
 	"gin-pro/model/system"
-	"gin-pro/model/system/request"
+	sysRes "gin-pro/model/system/request"
 	"gorm.io/gorm"
 	"strings"
 )
@@ -25,11 +26,73 @@ func (a *ApiService) CreateApi(api system.SysApi) (err error) {
 	return global.GVA_DB.Create(&api).Error
 }
 
+// @function: GetDetail
+// @description: 根据id获取api详情
+// @param: id int
+// @return: err error
+func (a *ApiService) GetDetail(id int) (api system.SysApi, err error) {
+	err = global.GVA_DB.First(&api, "id = ?", id).Error
+	return api, err
+}
+
+// @function: UpdateApi
+// @description: 更新api信息
+// @param: api system.SysApi)
+// @return: err error
+func (a *ApiService) UpdateApi(api system.SysApi) (err error) {
+	var item system.SysApi
+	err = global.GVA_DB.First(&item, "id = ?", api.Id).Error
+	if err != nil {
+		return err
+	}
+	if item.Path != api.Path || item.Method != api.Method {
+		var duplicateItem system.SysApi
+		dupErr := global.GVA_DB.First(&duplicateItem, "path = ? AND method = ?", api.Path, api.Method).Error
+		if dupErr != nil {
+			if !errors.Is(dupErr, gorm.ErrRecordNotFound) {
+				return dupErr
+			}
+		} else {
+			if duplicateItem.Id != api.Id {
+				return errors.New("当前api路径已存在")
+			}
+		}
+	}
+	err = CasbinServiceApp.UpdateCasbinApi(item.Path, item.Method, api.Path, api.Method)
+	if err != nil {
+		return err
+	}
+	return global.GVA_DB.Save(&item).Error
+
+}
+
+// @function: BatchDel
+// @description: 批量删除api
+// @param: ids request.IdsQuery
+// @return: err error
+func (a *ApiService) BatchDel(ids request.IdsQuery) (err error) {
+	return global.GVA_DB.Transaction(func(tx *gorm.DB) error {
+		var apis []system.SysApi
+		err = tx.Find(&apis, "id in ?", ids.Ids).Error
+		if err != nil {
+			return err
+		}
+		err = tx.Delete(&[]system.SysApi{}, "id in ?", ids.Ids).Error
+		if err != nil {
+			return err
+		}
+		for _, api := range apis {
+			CasbinServiceApp.ClearCasbin(1, api.Path, api.Method)
+		}
+		return err
+	})
+}
+
 // @function: GetApiLists
 // @description: 获取api列表
-// @param: query request.SysApiQuery
+// @param: query sysRes.SysApiQuery
 // @return: lists []system.SysApi, total int64, err error
-func (a *ApiService) GetApiLists(query request.SysApiQuery) (lists []system.SysApi, total int64, err error) {
+func (a *ApiService) GetApiLists(query sysRes.SysApiQuery) (lists []system.SysApi, total int64, err error) {
 	var limit = query.PageSize
 	var offset = (query.Page - 1) * limit
 	var apiLists []system.SysApi
@@ -40,7 +103,6 @@ func (a *ApiService) GetApiLists(query request.SysApiQuery) (lists []system.SysA
 	if query.Description != "" {
 		db = db.Where("description LIKE ?", "%"+query.Description+"%")
 	}
-
 	if query.Method != "" {
 		db = db.Where("method = ?", query.Method)
 	}
